# gba-hal

./: .travis.yml  Cargo.toml  README.md
src/: data.rs  lib.rs  mmio.rs
src/mmio/: dma.rs  irq.rs  keypad.rs  lcd.rs  sound.rs  timers.rs
